bookinfo/01-namespaces.yaml
apiVersion: v1  
kind: Namespace  
metadata:  
  name: bookinfo
  labels:  
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: privileged
